[package]
name = "cloudflare-ddns"
description = "Cloudflare DNS info updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
time = "0.3"
rsdns = { version = "0.14", features = ["net-std"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "mips"))'.dependencies]
minreq = { version = "~2.6", features = ["https-rustls-probe", "json-using-serde"] }

[target.mips-unknown-linux-musl.dependencies]
minreq = { version = "~2.6", features = ["https-native", "json-using-serde"] }

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
codegen-units = 1
