[package]
name = "cloudflare-ddns"
description = "Cloudflare DNS info updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", default-features = false, features = ["std"] }
rsdns = { version = "0.14", features = ["net-std"], optional = true }
clap = { version = "4.0.32", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
syn = { version = "1.0", default-features = false }
regex = { version = "1.7", default-features = false, features = ["std"] }
regex-syntax = { version = "0.6", default-features = false }

[features]
dns = ["dep:rsdns"]

[target.'cfg(not(target_arch = "mips"))'.dependencies]
minreq = { version = "~2.6", features = ["https-rustls-probe", "json-using-serde"] }

[target.mips-unknown-linux-musl.dependencies]
minreq = { version = "~2.6", features = ["https-native", "json-using-serde"] }

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
codegen-units = 1
